--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,15 +2,14 @@
 
 {% block content %}
     <h1>Add Blog Entry</h1>
-    <br>
     <form action="/newpost" method="POST">
         <label>
             <p>Title for your new Blog post:</p>
-            <input type="text" name="blog_title" >
+            <input type="text" name="blog_title" value={{blog_title}}>
         </label>
         <label>
             <p>Your new Blog message:</p>
-            <textarea name="blog_body" ></textarea>
+            <textarea name="blog_body">{{blog_body}}</textarea>
         </label>
         <input type="submit">
     </form>
