corrected error message location and added style

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,10 +1,12 @@
 {%extends 'base.html'%}
 
 {%block content%}
-    <h1>Build a Blog</h1>
+<div style="margin: 25px;">
+    <h1 style="text-align: center">Build a Blog</h1>
     {% for post in blog_post %}
         <h2><a href="/blog?id={{post.id}}">{{post.title}}</a></h2>
         <p>{{post.body}}</p>
         <hr>
     {% endfor %}
+</div>
 {%endblock%}
