--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>Build-a-Blog</title>
     <style>
         .error  {
@@ -13,16 +16,18 @@
     </style>
 </head>
 <body>
-    <a href="/blog">Main Blog Page</a>
-    <a href="/newpost" style="display: inline-block">Add a Blog Entry</a>
-
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <p class="error">{{messages[0]}}</p>
-        <p class="error">{{messages[1]}}</p>
-        {%endif%}
-    {%endwith%}
-    
+    <div style="padding: 10px;">
+        <a href="/blog" style="padding: 5px;">Main Blog Page</a>
+        <a href="/newpost" style="padding: 5px;">Add a Blog Entry</a>
+    <!-- <div style="padding-top:25px;">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <p class="error"><em>{{messages[0]}}</em></p>
+            <p class="error"><em>{{messages[1]}}</em></p>
+            {%endif%}
+        {%endwith%}
+    </div> -->
+    </div>
     {%block content%}
     {%endblock%}
 
