--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{blog_title}}</h1>
+<div style="padding: 25px;">
+    <h1 style="padding-bottom: 10px;">{{blog_title}}</h1>
     <p>{{blog_body}}</p>
+</div>
 {% endblock %}
