--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 
 {%block content%}
-<div style="margin: 25px;">
+<div style="padding: 25px;">
     <h1 style="text-align: center">Build a Blog</h1>
     {% for post in blog_post %}
         <h2><a href="/blog?id={{post.id}}">{{post.title}}</a></h2>
