--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,6 @@
             <h3>Verify Password:</h3>
             <input type="password" name="verify">
         </label>
-        <input type="button" value="Create Account">
+        <input type="submit" value="Create Account">
     </form>
 {% endblock %}
