--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -4,5 +4,10 @@
 <div style="padding: 25px;">
     <h1 style="padding-bottom: 10px;">{{blog_title}}</h1>
     <p>{{blog_body}}</p>
+    {% for user in users %}
+        {% if post.owner_id == user.id %}
+        <sub><em>Written by: </em><a href="/blog?username={{user.username}}">{{user.username}}</a></sub>
+        {% endif %}
+    {% endfor %}
 </div>
 {% endblock %}
