--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 style="margin: 15px;">Author: {{username}}</h2>
-{% for post in posts %}
-<div style="margin: 20px;">
-    <h4>{{post.title}}</h4>
-    <p>{{post.body}}</p>
+<div class="container" style="padding: 25px;">
+    <h2 style="margin: 15px;">Author: {{username}}</h2>
+    {% for post in posts %}
+    <div style="margin: 20px;">
+        <h4>{{post.title}}</h4>
+        <p>{{post.body}}</p>
+    </div>
 </div>
 {% endfor %}
 {% endblock %}
