--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
     </style>
 </head>
 <body style="margin: 2em;">
-    <div>
+
+    <div  class="container">
         <a href="/" style="padding-right: 5px;">Home</a>
         <a href="/blog" style="padding-right: 5px;">Main Blog Page</a>
         <a href="/newpost">Add a Blog Entry</a>
