--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div style="padding: 25px;" class="container">
 <h1>Blog users:</h1>
     <ul style="margin: 10px;">
         {% for user in blog_users %}
             <li><a href="/blog?username={{user.username}}">{{user.username}}</a></li>
         {% endfor %}
     </ul>
+</div>
 {% endblock %}
