--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="padding: 25px">
+<div style="padding: 25px" class="container">
     <h1 style="justify-content: center">Add Blog Entry</h1>
     {% with messages = get_flashed_messages() %}
         <p class='success'><em>{{messages[0]}}</em></p>
@@ -35,5 +35,4 @@
         <input type="submit">
     </form>
 </div>
-    
 {% endblock %}
