--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="padding: 25px;">
+<div style="padding: 25px;" class="container">
     <h1 style="padding-bottom: 10px;">{{blog_title}}</h1>
     <p>{{blog_body}}</p>
     {% for user in users %}
